Correction contrast ratio

--- a/css/style.css
+++ b/css/style.css
@@ -1071,7 +1071,19 @@ strong {
 
 p {
     
-    font-size: 18px;
-    
+    font-size: 18px;  
+}
 
+form {
+
+    font-weight:bold;
+    color:#212121;
+   
+}
+
+.bouton-cote {
+    position: absolute;
+    left: 100%;
+    top:22%;
+    margin-left: 75px;
 }
